# IbisPluginsExtraMARIN

./: README.md
CommandsProcessing/: CMakeLists.txt  commandsprocessingplugininterface.cpp  commandsprocessingplugininterface.h  commandsprocessingwidget.cpp  commandsprocessingwidget.h  commandsprocessingwidget.ui  declare-plugin.cmake
OpenIGTLSender/: CMakeLists.txt  declare-plugin.cmake  openigtlsenderplugininterface.cpp  openigtlsenderplugininterface.h  openigtlsenderwidget.cpp  openigtlsenderwidget.h  openigtlsenderwidget.ui
